RESOLVED FIXED237854
REGRESSION(r288464?):[ iOS15 Release GPUP arm64 ] TestWebKitAPI.GPUProcess.ExitsUnderMemoryPressureGetUserMediaAudioCase is a constant failure
https://bugs.webkit.org/show_bug.cgi?id=237854
Summary REGRESSION(r288464?):[ iOS15 Release GPUP arm64 ] TestWebKitAPI.GPUProcess.Ex...
Robert Jenner
Reported 2022-03-14 15:34:45 PDT
TestWebKitAPI.GPUProcess.ExitsUnderMemoryPressureWebRTCCase is a constantly failing api-test on iOS15 Release GPUP simulators running on arm64. HISTORY: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.GPUProcess.ExitsUnderMemoryPressureWebRTCCase Failure Text: TestWebKitAPI.GPUProcess.ExitsUnderMemoryPressureWebRTCCase 2022-03-14 09:08:40.058 TestWebKitAPI[18453:83620880] Writing analzed variants. (webrtc_video_engine.cc:3482): Absent receive stream; ignoring clearing encoded frame sink for ssrc 0 thread_policy_set(1) returned 46..... /Volumes/Data/worker/ios-simulator-15-release/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/GPUProcess.mm:630 Expected equality of these values: 0 [configuration.get().processPool _gpuProcessIdentifier] Which is: 18459
Attachments
Patch (12.90 KB, patch)
2022-04-26 01:27 PDT, youenn fablet
no flags
Radar WebKit Bug Importer
Comment 1 2022-03-14 15:35:16 PDT
Robert Jenner
Comment 2 2022-03-14 18:30:06 PDT
I was able to reproduce the failure at iOS15 Release ToT using the following test: run-api-tests --ios-simulator TestWebKitAPI.GPUProcess.ExitsUnderMemoryPressureWebRTCCase --release --verbose I have not been able to discover the regression point because my simulator does not want to run on the debug builds I am downloading.
Ryan Haddad
Comment 3 2022-03-31 10:27:55 PDT
Can we disable this test for now? It is slowing down EWS.
youenn fablet
Comment 4 2022-04-07 05:35:19 PDT
This seems iOS specific, so we should probably reenable it in MacOS. And maybe split the test to better understand the issue.
youenn fablet
Comment 5 2022-04-07 05:36:57 PDT
youenn fablet
Comment 7 2022-04-26 01:27:35 PDT
EWS
Comment 8 2022-04-26 08:52:55 PDT
Committed r293425 (249985@main): <https://commits.webkit.org/249985@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 458339 [details].
Note You need to log in before you can comment on or make changes to this bug.