Source/WebKit/WebProcess/cocoa/RemoteRealtimeMediaSourceProxy.h
@@ -50,7 +50,7 @@ public:
     RemoteRealtimeMediaSourceProxy(RemoteRealtimeMediaSourceProxy&&) = default;
     RemoteRealtimeMediaSourceProxy& operator=(RemoteRealtimeMediaSourceProxy&&) = default;
 
-    IPC::Connection* connection();
+    IPC::Connection& connection() { return m_connection.get(); }
     WebCore::RealtimeMediaSourceIdentifier identifier() const { return m_identifier; }
     WebCore::PageIdentifier pageIdentifier() const { return m_pageIdentifier; }
     WebCore::CaptureDevice::DeviceType deviceType() const { return m_device.type(); }
@@ -84,8 +84,11 @@ public:
     bool interrupted() const { return m_interrupted; }
     void setInterrupted(bool interrupted) { m_interrupted = interrupted; }
 
+    void updateConnection();
+
 private:
     WebCore::RealtimeMediaSourceIdentifier m_identifier;
+    Ref<IPC::Connection> m_connection;
     WebCore::CaptureDevice m_device;
     bool m_shouldCaptureInGPUProcess { false };
     WebCore::PageIdentifier m_pageIdentifier;
@@ -98,15 +101,6 @@ private:
     bool m_interrupted { false };
     bool m_isEnded { false };
 };
-
-inline RemoteRealtimeMediaSourceProxy::RemoteRealtimeMediaSourceProxy(WebCore::RealtimeMediaSourceIdentifier identifier, const WebCore::CaptureDevice& device, bool shouldCaptureInGPUProcess, const WebCore::MediaConstraints* constraints)
-    : m_identifier(identifier)
-    , m_device(device)
-    , m_shouldCaptureInGPUProcess(shouldCaptureInGPUProcess)
-{
-    if (constraints)
-        m_constraints = *constraints;
-}
 
 } // namespace WebKit
 
